--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity
-            android:name=".activities.SplashActivity"
+            android:name=".ui.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,46 +32,46 @@
                 android:value="org.secuso.privacyfriendlyexample.activities.MainActivity" />
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlyexample.activities.MainActivity"
+            android:name="org.secuso.privacyfriendlyexample.ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlyexample.activities.AboutActivity"
+            android:name="org.secuso.privacyfriendlyexample.ui.AboutActivity"
             android:label="@string/about"
-            android:parentActivityName="org.secuso.privacyfriendlyexample.activities.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlyexample.ui.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlyexample.activities.MainActivity" />
+                android:value="org.secuso.privacyfriendlyexample.ui.MainActivity" />
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlyexample.activities.HelpActivity"
+            android:name="org.secuso.privacyfriendlyexample.ui.HelpActivity"
             android:label="@string/help"
-            android:parentActivityName="org.secuso.privacyfriendlyexample.activities.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlyexample.ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlyexample.activities.MainActivity" />
+                android:value="org.secuso.privacyfriendlyexample.ui.MainActivity" />
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlyexample.activities.SettingsActivity"
+            android:name="org.secuso.privacyfriendlyexample.ui.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="org.secuso.privacyfriendlyexample.activities.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlyexample.ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlyexample.activities.MainActivity" />
+                android:value="org.secuso.privacyfriendlyexample.ui.MainActivity" />
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlyexample.activities.GameActivity"
+            android:name="org.secuso.privacyfriendlyexample.ui.GameActivity"
             android:label="@string/title_activity_game"
-            android:parentActivityName="org.secuso.privacyfriendlyexample.activities.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlyexample.ui.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlyexample.activities.MainActivity" />
+                android:value="org.secuso.privacyfriendlyexample.ui.MainActivity" />
         </activity>
     </application>
 
