--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,11 @@
+plugins {
+    id "org.jetbrains.kotlin.plugin.serialization" version "$kotlin_version"
+}
+
 apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
 apply plugin: 'kotlin-kapt'
+
 
 android {
     compileSdk 34
@@ -61,7 +66,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
-    implementation "org.secuso:pfa-core"
+    implementation("org.secuso.pfa-core:ui-compose")
+    implementation("org.secuso.pfa-core:model")
     implementation("androidx.compose.runtime:runtime:1.6.4")
 
 }
