--- a/compose/build.gradle
+++ b/compose/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation("org.secuso.pfa-core:ui-compose")
     implementation("org.secuso.pfa-core:model")
     implementation("androidx.compose.runtime:runtime:1.6.4")
+    implementation("androidx.compose.ui:ui-viewbinding:1.6.7")
+    implementation 'androidx.activity:activity-compose:1.9.0'
 
 }
 repositories {
